@@ -1,5 +1,7 @@
 2009-01-24 Richard Dale <richard.j.dale@gmail.com>
 * Fixed bugs in the widgetgallery 'Form Validators' option
+* The Pie Chart example wasn't calling super in its WContainer constructor and
+was causing a seg fault
 
 2009-01-23 Richard Dale <richard.j.dale@gmail.com>
 * Added the widgetgallery example, and amended the charts, dragdrop and 
